correcting spacing on MISSING PIC

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -89,6 +89,8 @@
 
 .staff_div span h3 {
 	margin-left: 15px;
+	margin-top: 16px;
+	margin-bottom: 16px;
 }
 
 .staff_div li img {
